--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<app-header> </app-header>
+<app-header (isSideBarToggle)="isSideBarToggle()"> </app-header>
 <!-- <router-outlet></router-outlet> -->
 <mat-drawer-container class="example-container">
-    <mat-drawer mode="side" opened><app-side-nav></app-side-nav></mat-drawer>
+    <mat-drawer mode="side" [opened]="sideBar"><app-side-nav></app-side-nav></mat-drawer>
     <mat-drawer-content>
-        <app-dashbord></app-dashbord></mat-drawer-content>
+        <app-dashbord></app-dashbord>
+      </mat-drawer-content>
   </mat-drawer-container>
 
   <mat-divider></mat-divider>
 <app-footer></app-footer>
+
+
