--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,6 +1,6 @@
 <mat-list role="list">
     <div class="profile-card">
-<img src="https://cdn.icon-icons.com/icons2/2107/PNG/512/file_type_angular_icon_130754.png" alt=" no image">
+<img src="https://media.tenor.com/9z_YpLGzqf4AAAAM/jasonearlsgif-jasonearlsgifs.gif" alt=" no image">
 <b><p>Admin</p></b>
 <p>adminG@xyz.com</p>
     </div>
