--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,8 @@ mat-drawer{
 mat-drawer-content{
     padding: 10px;
 }
-/* ::-webkit-scrollbar {
-    width: 12px;
+::-webkit-scrollbar {
+    width: 3px;
     background-color: #F5F5F5;
   }
   
@@ -24,4 +24,4 @@ mat-drawer-content{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
   }
-   */
+  
